--- a/MicroRabbit.Transfer.API/appsettings.json
+++ b/MicroRabbit.Transfer.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "TransferDbConnection": "Server=jrmromao;Database=TransferDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
