added MVC frontend

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,7 @@ MicroRabbit.Transfer.Application/obj/
 MicroRabbit.Transfer.API/bin/
 
 MicroRabbit.Transfer.API/obj/
+
+MicroRabbit.MVC/obj/
+
+MicroRabbit.MVC/bin/
